--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
 		"build": "webpack --mode production && prettier --print-width=240 --tab-width=4 --parser html --write dist/*.html"
 	},
 	"dependencies": {
-		"swiper": "^4.5.0"
+		"axios": "^0.19.0",
+		"swiper": "^4.5.0",
+		"vee-validate": "^2.2.15",
+		"vue": "^2.6.10"
 	},
 	"devDependencies": {
 		"clean-webpack-plugin": "^2.0.1",
